<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.example.bestandroidcode.viewModel.TheCatViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/top_margin_guideline"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.05"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_margin_guideline"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_margin_guideline"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95"/>

        <include
            android:id="@+id/cat_photo_card_view"
            layout="@layout/card_view_cat_photo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="H, 3:3"
            app:layout_constraintBottom_toTopOf="@id/cat_category_group"
            app:layout_constraintStart_toEndOf="@id/left_margin_guideline"
            app:layout_constraintEnd_toStartOf="@id/right_margin_guideline"
            app:layout_constraintTop_toBottomOf="@id/top_margin_guideline"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cat_category_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/left_margin_guideline"
            app:layout_constraintEnd_toStartOf="@id/right_margin_guideline">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/category_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cat_category"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp"
                    app:layout_constraintBottom_toBottomOf="@+id/category_spinner"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    style="@style/TextAppearance.TheCat.Normal"/>

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/category_spinner"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:text="@string/category"
                    app:layout_constraintBottom_toBottomOf="@id/category_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/category_title"
                    app:layout_constraintTop_toTopOf="@id/category_title"
                    app:categoryList="@{viewModel.categoryList}"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/math_question_text_input"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/category_spinner"
                    style="@style/Widget.TheCat.TextInputLayout"
                    tools:hint="1 + 2 = ?">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/math_answer_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:maxLength="3"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/submit_answer_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="@string/tap_me"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/math_question_text_input"
                    style="@style/Widget.TheCat.Button"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>